--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,34 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: npm test
+deploy:
+  machine:
+    enabled: true
 
+  working_directory: ~/client
+
+  steps:
+    - add_ssh_keys:
+        fingerprints:
+          - "7a:a7:1f:51:53:7a:ac:6c:82:36:43:3d:2f:30:33:0a"
+    - checkout
+    - run:
+        name: Push Main to Production
+        command: |
+          git push https://github.com/puzzlebottom/scheduler.git main:production
 workflows:
   version: 2
-  test:
+  test_and_deploy:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              ignore: production
+      - deploy:
+          filters:
+            branches:
+              ignore: production
+          requires:
+            - build
+
+      
