--- a/netlify.toml
+++ b/netlify.toml
@@ -14,5 +14,5 @@
   command = "npm run build"
 
 [build.environment]
-  REACT_APP_API_BASE_URL = "https://scheduler-api-production-016d.up.railway.app/"
-  REACT_APP_WEBSOCKET_URL = "wss://scheduler-api-production-016d.up.railway.app/"
+  REACT_APP_API_BASE_URL = "https://scheduler-api-production-016d.up.railway.app"
+  REACT_APP_WEBSOCKET_URL = "wss://scheduler-api-production-016d.up.railway.app"
